--- a/app/src/main/res/layout/activity_sample.xml
+++ b/app/src/main/res/layout/activity_sample.xml
@@ -33,6 +33,17 @@
         android:text="Set"
 
         />
+    <Button
+        android:id="@+id/btnConnect"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintBottom_toTopOf="@id/img_frame"
+        app:layout_constraintLeft_toRightOf="@id/setIp"
+        app:layout_constraintRight_toRightOf="parent"
+        android:text="Connect"
+
+        />
 
     <ImageView
         android:id="@+id/img_frame"
