changed a few things

--- a/app/src/main/res/layout/activity_sample.xml
+++ b/app/src/main/res/layout/activity_sample.xml
@@ -15,7 +15,7 @@
     android:layout_width="500dp"
     android:layout_height="wrap_content"
     android:hint="Introduce IP Adress"
-    android:inputType="numberDecimal"
+    android:inputType="text"
     app:layout_constraintTop_toTopOf="parent"
     app:layout_constraintBottom_toTopOf="@id/img_frame"
     app:layout_constraintLeft_toLeftOf="parent"
