--- a/app/src/main/res/layout/activity_sample.xml
+++ b/app/src/main/res/layout/activity_sample.xml
@@ -53,17 +53,68 @@
 
 
 
+    <!-- Up Button -->
+    <Button
+        android:id="@+id/upButton"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="Up"
+        app:layout_constraintBottom_toTopOf="@+id/downButton"
+        android:layout_above="@+id/downButton"
+        app:layout_constraintLeft_toLeftOf="parent"
+        android:layout_marginBottom="16dp"
+        android:onClick="onUpButtonClick" />
+
+    <!-- Left Button -->
+    <Button
+        android:id="@+id/leftButton"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="left"
+        app:layout_constraintRight_toRightOf="parent"
+        app:layout_constraintBottom_toTopOf="@id/rightButton"
+       android:layout_above="@id/rightButton"
+        android:layout_marginBottom="16dp"
+        android:onClick="onLeftButtonClick" />
+
+    <!-- Right Button -->
+    <Button
+        android:id="@+id/rightButton"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="Right"
+        android:layout_below="@id/leftButton"
+        app:layout_constraintRight_toRightOf="parent"
+       app:layout_constraintBottom_toBottomOf="parent"
+        android:layout_marginStart="16dp"
+        android:layout_marginTop="16dp"
+        android:onClick="onRightButtonClick" />
+
+    <!-- Down Button -->
+    <Button
+        android:id="@+id/downButton"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="Down"
+        app:layout_constraintLeft_toLeftOf="parent"
+        app:layout_constraintBottom_toBottomOf="parent"
+        android:layout_below="@id/upButton"
+        android:layout_marginTop="16dp"
+        android:onClick="onDownButtonClick" />
 
 
-    <com.codertainment.dpadview.DPadView
+    <!--    <com.codertainment.dpadview.DPadView
 
-    android:id="@+id/dpad"
-    android:layout_width="128dp"
-    app:layout_constraintBottom_toBottomOf="parent"
-    app:layout_constraintStart_toStartOf="parent"
-    app:layout_constraintEnd_toStartOf="@id/img_frame"
-    app:layout_constraintLeft_toLeftOf="parent"
-    android:layout_height="128dp"
-    android:src="@drawable/ic_gamepad_black" />
+        android:id="@+id/dpad"
+        android:layout_width="128dp"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintEnd_toStartOf="@id/img_frame"
+        app:layout_constraintLeft_toLeftOf="parent"
+        android:layout_height="128dp"
+        android:src="@drawable/ic_gamepad_black" />-->
+
+
+
 
 </androidx.constraintlayout.widget.ConstraintLayout>
