--- a/app/src/main/res/layout/activity_sample.xml
+++ b/app/src/main/res/layout/activity_sample.xml
@@ -51,6 +51,28 @@
 
         />
 
+    <Button
+        android:id="@+id/onButton"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        app:layout_constraintTop_toTopOf="parent"
+
+        app:layout_constraintLeft_toLeftOf="parent"
+        app:layout_constraintBottom_toBottomOf="parent"
+        android:text="on"
+
+        />
+    <Button
+        android:id="@+id/offButton"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        android:layout_centerVertical="true"
+        android:text="off"
+
+        />
 
 
     <!-- Up Button -->
@@ -103,16 +125,6 @@
         android:onClick="onDownButtonClick" />
 
 
-    <!--    <com.codertainment.dpadview.DPadView
-
-        android:id="@+id/dpad"
-        android:layout_width="128dp"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintEnd_toStartOf="@id/img_frame"
-        app:layout_constraintLeft_toLeftOf="parent"
-        android:layout_height="128dp"
-        android:src="@drawable/ic_gamepad_black" />-->
 
 
 
