--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -5,4 +5,5 @@
     <color name="white">#FFFFFFFF</color>
 
     <color name="gray_01_50">#80F0EEE8</color>
+    <color name="transparent">#00000000</color>
 </resources>
