--- a/app/src/main/res/layout/activity_sample.xml
+++ b/app/src/main/res/layout/activity_sample.xml
@@ -13,11 +13,17 @@
         android:layout_height="match_parent"
         android:background="@color/transparent"
         android:scaleType="centerCrop"
-        app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintLeft_toLeftOf="parent"
-        app:layout_constraintRight_toRightOf="parent"
         app:layout_constraintTop_toTopOf="parent"
         tools:ignore="ContentDescription" />
+    <com.nuwarobotics.sample.camera.FaceInfoView
+        android:id="@+id/faceInfo"
+        android:layout_width="0dp"
+        android:layout_height="0dp"
+        app:layout_constraintTop_toTopOf="@id/img_frame"
+        app:layout_constraintBottom_toBottomOf="@id/img_frame"
+        app:layout_constraintLeft_toLeftOf="@id/img_frame"
+        app:layout_constraintRight_toRightOf="@id/img_frame"/>
 
     <EditText
         android:id="@+id/ipText"
